# stm32-demo

./: .gdbinit  Cargo.toml  Embed.toml  Project.axf  README.md  memory.x  openocd.cfg
.cargo/: config
.zed/: settings.json
src/: main.rs
