[package]
name = "stm32demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
stm32f1xx-hal = "0.9.0"

[features]
default = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/medium"]