[package]
name = "stm32demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7" # Low level access to Cortex-M processors
cortex-m-rt = "0.7.3" # Minimal runtime / startup for Cortex-M microcontrollers
stm32f1xx-hal = {version="0.10.0", features=["stm32f103", "medium", "rt"]} # HAL for the STM32F1xx family of microcontrollers
panic-halt = "0.2.0"
rtt-target = {version="0.3", features=["cortex-m"]}
nb = "1.1" # Minimal non-blocking I/O layer
